app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: ui
      version: 0.0.1     
  template:
    metadata:
      name: ui
      labels:
        app: thegym
        component: ui
        version: 0.0.1   
    spec:
      containers:
      - name: ui
        image: digitalemil/thegyminthecloud:microservice-ui-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: uiupdater
        image: digitalemil/thegyminthecloud:microservice-uiupdater-v0.0.1
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: ui
spec:
  selector:
    app: thegym
    component: ui
    version: 0.0.1  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagetransformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messagetransformer
      version: 0.0.1    
  template:
    metadata:
      name: messagetransformer
      labels:
        app: thegym
        component: messagetransformer
        version: 0.0.1      
    spec:
      containers:
      - name: messagetransformer
        image: digitalemil/thegyminthecloud:microservice-messagetransformer-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3032
---
kind: Service
apiVersion: v1
metadata:
  name: messagetransformer
spec:
  selector:
    app: thegym
    component: messagetransformer
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3032
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagevalidator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messagevalidator
      version: 0.0.1  
  template:
    metadata:
      name: messagevalidator
      labels:
        app: thegym
        component: messagevalidator
        version: 0.0.1   
    spec:
      containers:
      - name: messagevalidator
        image: digitalemil/thegyminthecloud:microservice-messagevalidator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3034
---
kind: Service
apiVersion: v1
metadata:
  name: messagevalidator
spec:
  selector:
    app: thegym
    component: messagevalidator
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3034
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagelistener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messagelistener
      version: 0.0.1  
  template:
    metadata:
      name: messagelistener
      labels:
        app: thegym
        component: messagelistener
        version: 0.0.1  
    spec:
      containers:
      - name: messagelistener
        image: digitalemil/thegyminthecloud:microservice-messagelistener-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3030
---
kind: Service
apiVersion: v1
metadata:
  name: messagelistener
spec:
  selector:
    app: thegym
    component: messagelistener
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmmlevaluator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: pmmlevaluator
      version: 0.0.1  
  template:
    metadata:
      name: loader
      labels:
        app: thegym
        component: pmmlevaluator
        version: 0.0.1  
    spec:
      containers:
      - name: pmmlevaluator
        image: digitalemil/thegyminthecloud:microservice-pmmlevaluator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: pmmlevaluator
spec:
  selector:
    app: thegym
    component: pmmlevaluator
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uiversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: uiversion
      version: 0.0.1  
  template:
    metadata:
      name: uiversion
      labels:
        app: thegym
        component: uiversion
        version: 0.0.1  
    spec:
      containers:
      - name: uiversion
        image: digitalemil/thegyminthecloud:microservice-uiversion-v0.0.1-1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3024
---
kind: Service
apiVersion: v1
metadata:
  name: uiversion
spec:
  selector:
    app: thegym
    component: uiversion
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3024
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messageloader
      version: 0.0.1  
  template:
    metadata:
      name: loader
      labels:
        app: thegym
        component: messageloader
        version: 0.0.1  
    spec:
      containers:
      - name: loader
        image: digitalemil/thegyminthecloud:microservice-loadgenerator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
