infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  labels:
    app: thegym
    component: elastic
    version: 0.0.1      
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: elastic
      version: 0.0.1      
  template:
    metadata:
      labels:
        app: thegym
        component: elastic
        version: 0.0.1
    spec:
      containers:
      - name: elastic
        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.0
        ports:
        - containerPort: 9200
        - containerPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: elastic9200
spec:
  selector:
    app: thegym
    component: elastic
    version: 0.0.1
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elastic9300
spec:
  selector:
    app: thegym
    component: elastic
    version: 0.0.1
  ports:
    - protocol: TCP
      port: 9300
      targetPort: 9300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: thegym
    component: kibana
    version: 0.0.1      
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: kibana
      version: 0.0.1      
  template:
    metadata:
      labels:
        app: thegym
        component: kibana
        version: 0.0.1
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:6.5.0
        ports:
        - containerPort: 9200
        - containerPort: 9300
---
kind: Service
apiVersion: v1
metadata:
  name: kibana
  labels:
    app: thegym
    component: kibana
    version: 0.0.1
spec:
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
      nodePort: 30959
  selector:
    app: thegym
    component: kibana
    version: 0.0.1
  type: LoadBalancer
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaconnect
  labels:
    app: thegym
    component: kafkaconnect
    version: 0.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: kafkaconnect
      version: 0.0.1   
  template:
    metadata:
      labels:
        app: thegym
        component: kafkaconnect
        version: 0.0.1
    spec:
      containers:
      - name: kafkaconnect
        image: digitalemil/thegyminthecloud:kafka-connect-with-bigtable-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
kind: Service
apiVersion: v1
metadata:
  name: kafkaconnect
spec:
  selector:
    app: thegym
    component: kafkaconnect
    version: 0.0.1
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
